# tammi-2.0

./: .gitignore  CHANGELOG.md  PULL_REQUEST.md  README.md  pyproject.toml  tammi_cli.py  tammi_cli_legacy.py  test_gpu_output.csv
__MACOSX/: ._test_texts
__MACOSX/test_texts/: ._Amazon-adv.txt  ._Bolivia-adv.txt  ._Cigarettes-adv.txt  ._tammiTest.txt
docs/: PULL_REQUEST.md  README.md  api_reference.md  architecture.md  contributing.md  crc_cards.md  user_guide.md
tammi/: __init__.py
tammi/analysis/: __init__.py  analyzer.py  metrics.py  morpholex.py
tammi/cli/: __init__.py  main.py  menu.py  progress.py  runner.py
tammi/io/: __init__.py  base.py  csv_io.py  database_io.py  file_io.py  json_io.py
tammi/tests/: __init__.py  test_analysis.py  test_io.py
test_texts/: Amazon-adv.txt  tammiTest.txt
